Fixed blockquote paragraph line wrap.

--- a/srcs/css/index.styl
+++ b/srcs/css/index.styl
@@ -223,7 +223,7 @@ blockquote {
   border-left: 0.25em solid $color-background;
   color: $color-quote;
   p {
-    white-space: pre;
+    white-space: pre-wrap;
     color: $color-quote;
     padding: 0;
     margin: 0;
